[metadata]
name = comby
version = attr: src.comby.__version__
author = Christopher Timperley
author-email = christimperley@googlemail.com
url = "https://github.com/ChrisTimperley/comby-python"
description = Lightweight language-independent syntax rewriting.
long-description = file: README.md, LICENSE
keywords = rewrite, syntax, comby, transformation
license = MIT
classifiers =
    Natural Language :: English
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
python_requires = >= 3.5
install_requires =
    requests >= 2.0.0
    typing >= 0.4.1
