[metadata]
name = comby
version = 0.0.1
author = Christopher Timperley
author-email = christimperley@googlemail.com
url = "https://github.com/ChrisTimperley/comby-python"
description = Lightweight language-independent syntax rewriting.
long-description = file: README.rst, LICENSE
long-descripion-content-type = text/reStructuredText
keywords = rewrite, syntax, comby, transformation
license = MIT
classifiers =
  Natural Language :: English
  Intended Audience :: Developers
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7

[options]
python_requires = >= 3.5
install_requires =
  requests >= 2.0.0
  attrs ~= 19.2.0
  typing >= 0.4.1
package_dir =
  =src
packages = find:

[options.packages.find]
where = src

[flake8]
per-file-ignores =
  src/comby/__init__.py:F401

[mypy]
ignore_missing_imports = True
