[metadata]
name = comby
version = 0.0.2
author = Christopher Timperley
author-email = christimperley@googlemail.com
url = "https://github.com/ChrisTimperley/comby-python"
description = Lightweight language-independent syntax rewriting.
long-description = file: README.rst, LICENSE
long-descripion-content-type = text/reStructuredText
keywords = rewrite, syntax, comby, transformation
license = MIT
classifiers =
  Natural Language :: English
  Intended Audience :: Developers
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8

[options]
python_requires = >= 3.6
install_requires =
  attrs >= 19.2.0
  loguru ~= 0.4
  requests ~= 2.0
  typing >= 0.4
package_dir =
  =src
packages = find:

[options.packages.find]
where = src

[flake8]
per-file-ignores =
  src/comby/__init__.py:F401

[mypy]
ignore_missing_imports = True

[aliases]
test = pytest

[tool:pytest]
addopts = -rx -v

[tox:tox]
envlist = py37, py38

[testenv]
deps =
  mypy
  flake8
  pytest
commands =
  mypy src
  flake8 src
  pytest
